currentState